--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server/server.js",
     "start-server": "nodemon server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec \"npm test\""
   },
   "engines": {
     "node": "6.2.2"
@@ -14,11 +15,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "expect": "^1.20.2",
+    "mocha": "^3.0.2",
     "nodemon": "^1.18.9"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "moment": "^2.15.1",
     "socket.io": "^1.4.8"
   }
 }
